adjust to fix only x viewport overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -26,7 +26,7 @@ textarea {
 
 * {
   font-size: large;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 
